# cipher-solana-bot-toolkit

./: .env.example  .gitignore  README.md
docs/: MODULES.md  SECURITY.md  SETUP.md  ci-recipe.yml
src/arb-mev/: README.md
src/arb-mev/predator-core/: Cargo.toml
src/arb-mev/predator-core/src/: actions.rs  config.rs  constants.rs  error.rs  events.rs  lib.rs  state.rs  types.rs
src/arb-mev/predator-execution/: Cargo.toml
src/arb-mev/predator-execution/src/: alt.rs  ata.rs  builder.rs  confirmer.rs  jito.rs  lib.rs  simulator.rs  submitter.rs
src/arb-mev/predator-geyser/: Cargo.toml
src/arb-mev/predator-geyser/src/: decoder.rs  filters.rs  lib.rs  router.rs  subscriber.rs
src/arb-mev/predator-protocols/: Cargo.toml
src/arb-mev/predator-protocols/src/: flash_loan.rs  jupiter.rs  lib.rs  oracle.rs  traits.rs
src/arb-mev/predator-strategies/: Cargo.toml
src/arb-mev/predator-strategies/src/: backrun.rs  flash_arb.rs  lib.rs  lst_arb.rs  migration_snipe.rs  priority.rs  scanner.rs  traits.rs
src/copy-trade/: README.md  copy_trade.py
src/flashloan/: README.md  atomic_arb_builder.py  flash_loan.py  flash_loan_bridge.py  flash_loan_cascader.py  flash_loan_executor.py  flash_loan_router.py  jito_bundle_coordinator.py  kamino_client.py  marginfi_flash.py  orca_flash_swap.py  priority_fee.py  raydium_flash_swap.py  tx_precompute.py
src/memecoin-launcher/: Cargo.toml  README.md
src/memecoin-launcher/src/: budget.rs  concept.rs  config.rs  creator.rs  fee_collector.rs  first_buyer.rs  image_gen.rs  ipfs.rs  lib.rs  main.rs  narrative.rs  pipeline.rs  sell_monitor.rs  tracker.rs  wallet.rs
src/volume-bot/: README.md  index.js  package.json
